feat: calculate cash vs installment
