# docs/swagger.yaml
@@ -1,5 +1,51 @@
 basePath: /api
 definitions:
+  dto.CashVsInstallmentsRequest:
+    properties:
+      cash_discount:
+        minimum: 0
+        type: integer
+      cashback:
+        maximum: 10000
+        minimum: 0
+        type: integer
+      credit_card_interest:
+        maximum: 10000
+        minimum: 0
+        type: integer
+      installments:
+        minimum: 1
+        type: integer
+      interest:
+        maximum: 10000
+        minimum: 0
+        type: integer
+      interest_type:
+        allOf:
+        - $ref: '#/definitions/entity.InterestType'
+        enum:
+        - MONTHLY
+        - ANNUAL
+      purchase_value:
+        minimum: 0
+        type: integer
+    required:
+    - installments
+    - interest
+    - interest_type
+    - purchase_value
+    type: object
+  dto.CashVsInstallmentsResponse:
+    properties:
+      cash_flow_by_month:
+        additionalProperties:
+          $ref: '#/definitions/usecase.CashFlow'
+        type: object
+      savings_with_cash:
+        type: integer
+      savings_with_credit_card:
+        type: integer
+    type: object
   dto.CompoundInterestRequest:
     properties:
       initial_deposit:
@@ -375,6 +421,13 @@ definitions:
       verified_email:
         type: boolean
     type: object
+  usecase.CashFlow:
+    properties:
+      cash:
+        type: integer
+      credit_card:
+        type: integer
+    type: object
   usecase.CompoundInterestResult:
     properties:
       monthly_interest:
@@ -709,6 +762,42 @@ paths:
       summary: Create or update budget
       tags:
       - Budget
+  /v1/calculator/cash-vs-installments:
+    post:
+      consumes:
+      - application/json
+      description: Calculate cash vs installments
+      parameters:
+      - description: Request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CashVsInstallmentsRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.CashVsInstallmentsResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Calculate cash vs installments
+      tags:
+      - Calculator
   /v1/calculator/compound-interest:
     post:
       consumes:
